--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mikser-assets",
-  "version": "1.1.2",
+  "version": "1.2.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -21,6 +21,7 @@
     "fs-extra": "^9.0.1",
     "jsonpath": "^1.0.2",
     "lodash": "^4.17.20",
-    "sharp": "^0.25.4"
+    "sharp": "^0.25.4",
+    "shorthash2": "^1.0.3"
   }
 }
